Fix overflow-x

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -72,10 +72,6 @@ $colour-blue-darken        : #0050bb;
 }
 
 
-html {
-  overflow-x: hidden;
-}
-
 body {
   color: $colour-black;
   background: $colour-white-lighten;
@@ -267,6 +263,8 @@ dfn[title], abbr[title] {
 
 #main {
   display: block;  // IE11 でブロック要素として扱われず border-bottom が効かないため設定する
+  width: 100%;
+  overflow-x: hidden;
   border-bottom: 2px solid $colour-grey-lighten;
   
   // Level 1
